[tool.poetry]
name = "project1-sapronov-dmitrii-m25-555"
version = "0.1.0"
description = ""
authors = ["dmitriy.sapronov <DmitriySapronovv@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "labyrinth_game" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 