[tool.poetry]
name = "project1-sapronov-dmitrii-m25-555"
version = "0.1.0"
description = "Консольная игра-лабиринт с загадками и случайными событиями."
authors = ["dmitriy.sapronov <DmitriySapronovv@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "labyrinth_game" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__", "constants.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 